[package]
name = "flight_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1", features = ["full"] }
tonic-reflection = "0.10.2"
futures = "0.3.30"
arrow-flight = "49.0.0"
arrow = "49.0.0"

[build-dependencies]
tonic-build = "0.10.2"
